--- a/style.css
+++ b/style.css
@@ -95,16 +95,25 @@ h1{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.intro_button{
+.intro_button {
     display: inline-block;
     text-decoration: none;
-    color: white;
-    background-color: orange;
     padding: .75em 1em;
-    margin-top: 0em;
+    margin-top: 0.5em;
     border-radius: 1em;
     font-weight: 600;
+    color: white;
+    font-size: 1em;
 }
+
+.intro_button.instagram {
+    background-color: #C13584; /* Instagram 紫色 */
+}
+
+.intro_button.linkedin {
+    background-color: #0077B5; /* LinkedIn 蓝色 */
+}
+
 
 .text-container{
     flex:0 100mm;
