--- a/style.css
+++ b/style.css
@@ -118,3 +118,17 @@ h1{
 .text-container{
     flex:0 100mm;
 }
+
+#vis-dotmap h2 {
+  text-align: center;
+  font-family: 'Georgia', serif;
+  font-size: 32px;
+  margin-bottom: 10px;
+}
+#dotmap-container svg {
+  display: block;
+  margin: auto;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  cursor: grab;
+}
